resort to the cloud

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" href="/favicon.ico" />
+    <link rel="icon" href="https://files.catbox.moe/omcmi5.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Noah's cool portfolio</title>
     <meta name="description" content="I have literally no idea what to put here" />
